--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,16 @@
     <meta name="description" content="Web site created using create-react-app" />
     <title>Travel Diary</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,drawing,places&key=AIzaSyA2ulNdNH-vuzi3DGlhslqsUW0o_n7_Gro"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,drawing,places&key=AIzaSyDKAIWbkM0JwPKv5CVcIvM_iYsj5c7XtMs"></script>
   </head>
   <body>
     <div id="root"></div>
   </body>
 </html>
+
+
+<!-- =AIzaSyA2ulNdNH-vuzi3DGlhslqsUW0o_n7_Gro -->
+
+
+
+<!-- AIzaSyA2ulNdNH-vuzi3DGlhslqsUW0o_n7_Gro -->
